Restore configuration cache tests