@@ -105,6 +105,14 @@ def fullFunctionalTest = tasks.register("fullFunctionalTest")
             javaLauncher.set(graalVm)
             if (baseName == 'configCacheFunctionalTest') {
                 systemProperty('config.cache', 'true')
+                // These args are required so that we can debug tests which
+                // run with the configuration cache, see https://github.com/gradle/gradle/issues/25898
+                jvmArgs = [
+                        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                        '--add-opens=java.base/java.util=ALL-UNNAMED',
+                        '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+                        '--add-opens=java.base/java.net=ALL-UNNAMED',
+                ]
             }
         }
         fullFunctionalTest.configure {
